# hypernevus-prototype

./: .dockerignore  .envrc  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.override.yaml  docker-compose.yaml  env.list
cpp/: CMakeLists.txt
cpp/src/: main.cpp
docker/: Dockerfile  docker-compose.yaml
notebooks/: Example Image 1.ipynb
notebooks/WIREs Review/: HSI vs RGB (Redux).ipynb  HSI vs RGB.ipynb  Publications per Year.ipynb  RGB Examples.ipynb  Simple Figures.ipynb
python/: cube-comp.py  hsc_reader.py  hsc_reader_old.py  kmeans-pca.py  kmeans.py  preprocess.py  preprocess_and_export.py  preprocessing.py  test.py  toy-mbsc.py  toy.py
python/experiments/clustering/: distance.py  kmeans-kpca.py  kmeans-manifold.py  sgd_spectral.py  toy-mbsc-simple.1.py  toy-mbsc-simple.py
python/experiments/clustering/mbsc/: example-toy.py  example_keca.py  mbsc.py
python/experiments/isicw2019/: cluster_patches.py  make_wavelength_gifs.py
python/mbsc/: example-toy-eigs.py  example.py
python/polynomial2d/: polynomial.py
python/processing/: preprocess_and_export.py
python/revenio/: click_spectra2.py  hsc_reader.py
script/: build  run  run-python
